--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=patient-service
+
+#Uncomment to use in memory db outside docker
+## Enable H2 console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#
+## H2 database setup
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=admin_viewer
+#spring.datasource.password=password
+#
+## JPA setup
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+## Initialize schema/data scripts on startup
+#spring.sql.init.mode=always
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+
+server.port=4000
+logging.level.root=info
